[metadata]
name = voidlens
version = 1.0.0
description = Peer into the digital void — OSINT & Digital Footprint Intelligence Suite
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any

[options]
python_requires = >=3.10
packages = find:

[options.packages.find]
include =
    voidlens
    voidlens.*
